--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,29 +31,15 @@ jobs:
       run: |
         aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 539935451710.dkr.ecr.us-east-1.amazonaws.com
 
-    # Create ECR repository for open project
-    - name: Create ECR repository for openproject
+    # Create ECR repository for OpenProject if it doesn't exist
+    - name: Create ECR repository for OpenProject
       run: |
-        aws ecr describe-repositories --repository-names openproject --region us-east-1 
+        aws ecr describe-repositories --repository-names openproject --region us-east-1 || \
+        aws ecr create-repository --repository-name openproject --region us-east-1
 
-    # Build, tag, and push Docker image for Patient Service
-    - name: Build, Tag & Push Docker Image for Patient Service
+    # Build, tag, and push Docker image for OpenProject
+    - name: Build, Tag & Push Docker Image for OpenProject
       run: |
-        cd Docker
-        docker build -t patient-service:latest -f Dockerfile .
-        docker tag patient-service:latest 302263075199.dkr.ecr.us-east-1.amazonaws.com/patient-service:latest
-        docker push 302263075199.dkr.ecr.us-east-1.amazonaws.com/patient-service:latest
-
-    # Build, tag, and push Docker image for Appointment Service
-    - name: Build, Tag & Push Docker Image for Appointment Service
-      run: |
-        cd App/Appointmnet/
-        docker build -t appointment-service:latest -f Dockerfile .
-        docker tag appointment-service:latest 302263075199.dkr.ecr.us-east-1.amazonaws.com/appointment-service:latest
-        docker push 302263075199.dkr.ecr.us-east-1.amazonaws.com/appointment-service:latest
-
-    # Optionally, remove local Docker images after pushing
-    - name: Cleanup local Docker images
-      run: |
-        docker rmi 302263075199.dkr.ecr.us-east-1.amazonaws.com/patient-service:latest
-        docker rmi 302263075199.dkr.ecr.us-east-1.amazonaws.com/appointment-service:latest
+        docker build -t openproject:latest -f Dockerfile .
+        docker tag openproject:latest 539935451710.dkr.ecr.us-east-1.amazonaws.com/openproject:latest
+        docker push 539935451710.dkr.ecr.us-east-1.amazonaws.com/openproject:latest
